# priori

./: .gitignore  README.md  TabPFN_GPU_experiments.ipynb  app.py  bench.py  make_colab.py  precompute.py  pyproject.toml
.github/workflows/: deploy.yml
public/: results.json
